--- a/asonix-chart/values.yaml
+++ b/asonix-chart/values.yaml
@@ -34,7 +34,8 @@ service:
 ingress:
   enabled: true
   className: "nginx"
-  annotations: {}
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
   hosts:
     - host: relay.toot.community
       paths:
