--- a/argocd/ingress/argocd-server-http-ingress.yaml
+++ b/argocd/ingress/argocd-server-http-ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   rules:
     - http:
