--- a/asonix-chart/values.yaml
+++ b/asonix-chart/values.yaml
@@ -42,7 +42,8 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    - secretName: cf-origin-certificate-tls
+#    - secretName: cf-origin-certificate-tls
+    - secretName: relay.toot.community-tls
       hosts:
         - relay.toot.community
 
