switch over cert from cf to le for grafana / argo

--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -31,7 +31,8 @@ spec:
             tls:
               - hosts:
                   - monitoring.toot.community
-                secretName: cf-origin-certificate-tls
+                secretName: monitoring.toot.community-tls
+                # secretName: cf-origin-certificate-tls
 
           sidecar:
             dashboards:
