--- a/argocd/ingress/argocd-server-http-ingress.yaml
+++ b/argocd/ingress/argocd-server-http-ingress.yaml
@@ -23,4 +23,5 @@ spec:
   tls:
     - hosts:
         - argocd.toot.community
-      secretName: cf-origin-certificate-tls
+#      secretName: cf-origin-certificate-tls
+      secretName: argocd.toot.community-tls
