--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -26,6 +26,8 @@ resources:
   - applications/cnpg.yaml
   - applications/loki.yaml
   - applications/promtail.yaml
+  - applications/cert-manager.yaml
+  - applications/cluster-issuers.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
