--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -277,6 +277,16 @@ jobs:
         memory: 451M
       limits:
         memory: 451M
+  statusesRemove:
+    enabled: true
+    schedule: "5 4 * * 7" # every day at 5am
+    days: 90
+    resources:
+      requests:
+        cpu: 1000m
+        memory: 1000M
+      limits:
+        memory: 1000M
   cleanupMediaProfiles:
     enabled: true
     schedule: "0 5 * * *" # every day at 5am
