--- a/mastodon-chart/templates/cronjob-accounts-prune.yaml
+++ b/mastodon-chart/templates/cronjob-accounts-prune.yaml
@@ -17,7 +17,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
         spec:
-          restartPolicy: OnFailure
+          restartPolicy: Never
           containers:
             - name: accounts-prune
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
