--- a/mastodon-chart/templates/cronjob-statuses-remove.yaml
+++ b/mastodon-chart/templates/cronjob-statuses-remove.yaml
@@ -19,7 +19,7 @@ spec:
           labels:
             {{- include "mastodon.labels" . | nindent 12 }}
         spec:
-          restartPolicy: OnFailure
+          restartPolicy: Never
           containers:
             - name: statuses-remove
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
