--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -262,7 +262,7 @@ ingress:
 jobs:
   annotations: {}
   cleanupMedia:
-    enabled: true
+    enabled: false
     schedule: "0 5 * * *" # every day at 5am
     days: 7
     resources:
@@ -272,7 +272,7 @@ jobs:
       limits:
         memory: 451M
   statusesRemove:
-    enabled: true
+    enabled: false
     schedule: "5 4 * * 6"
     days: 90
     resources:
@@ -282,7 +282,7 @@ jobs:
       limits:
         memory: 1500M
   cleanupMediaProfiles:
-    enabled: true
+    enabled: false
     schedule: "0 5 * * *" # every day at 5am
     days: 7
     resources:
@@ -292,7 +292,7 @@ jobs:
       limits:
         memory: 721M
   accountsPrune:
-    enabled: true
+    enabled: false
     schedule: "0 2 * * 1" # every monday at 2am
     resources:
       requests:
@@ -301,7 +301,7 @@ jobs:
       limits:
         memory: 584M
   removePreviewCards:
-    enabled: true
+    enabled: false
     schedule: "0 5 * * 1" # every monday at 5am
     resources:
       requests:
