--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -69,3 +69,11 @@ metadata:
   namespace: monitoring
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ci642yahclnvmjpwrpy3hnluse"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: tootcommunity-custom-ca
+  namespace: ingress-nginx
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/inkjop6yia45h7ttvv4cdt656e"
