--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -335,6 +335,8 @@ onePassword:
     ## - ACCESS_SECRET_KEY: <content>
   - name: db-backup-toot-community-creds
     itemPath: vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/2pry55mb7zpdtbssb4iohrc3iy
+  - name: client-verify-ca
+    itemPath: vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/inkjop6yia45h7ttvv4cdt656e
 
 keda:
   prometheusAddress: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
