this cronjob will put the instance in user-approval mode if we get more than 25 registrations in the past hour

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -309,6 +309,11 @@ jobs:
       limits:
         memory: 400Mi
     days: 180
+  registrationFailsafe:
+    enabled: true
+    schedule: "*/5 * * * *" # every 5th minute
+    triggerAfter: 25
+    triggerSetting: approved
 
 onePassword:
     ## It holds the following keys:
