--- a/mastodon-chart/templates/cronjob-cleanup-media.yaml
+++ b/mastodon-chart/templates/cronjob-cleanup-media.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "mastodon.labels" . | nindent 4 }}
 spec:
-  schedule: {{ .Values.jobs.cleanupMedia.schedule }}
+  schedule: {{ .Values.jobs.cleanupMedia.schedule | quote }}
   jobTemplate:
     spec:
       template:
