--- a/argocd/ingress/argocd-server-http-ingress.yaml
+++ b/argocd/ingress/argocd-server-http-ingress.yaml
@@ -4,11 +4,11 @@ metadata:
   name: argocd-server-http-ingress
   namespace: argocd
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  ingressClassName: nginx
   rules:
     - http:
         paths:
