updates mastodon v4.1.2 to nightly-2023-05-17

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: ghcr.io/mastodon/mastodon
   pullPolicy: IfNotPresent
-  tag: "v4.1.2"
+  tag: "nightly-2023-05-17"
 
 imagePullSecrets: [ ]
 nameOverride: ""
