changes DB configuration from local DB to managed DB

--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -46,16 +46,6 @@ spec:
               value: empty
             {{- end }}
             {{- end }}
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  key: {{ .Values.configuration.database.credentialSecret.usernameKey }}
-                  name: {{ .Values.configuration.database.credentialSecret.name }}
-            - name: DB_PASS
-              valueFrom:
-                secretKeyRef:
-                  key: {{ .Values.configuration.database.credentialSecret.passwordKey }}
-                  name: {{ .Values.configuration.database.credentialSecret.name }}
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -64,7 +54,7 @@ spec:
             - name: PORT
               value: "4000"
             - name: DB_SSLMODE
-              value: "disable"
+              value: "no-verify"
           envFrom:
             - configMapRef:
                 name: {{ include "mastodon.fullname" . }}-env
