--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -24,12 +24,7 @@ spec:
         app.kubernetes.io/component: streaming
     spec:
       containers:
-        - command:
-            - bash
-            - -c
-            - 'sed -i ''s/pgConfigs.production.ssl = true;/pgConfigs.production.ssl =
-          { rejectUnauthorized: false, };/g'' streaming/index.js && node ./streaming'
-          env:
+        - env:
             {{- if .Values.configuration.databaseReplicas.enabled }}
             {{- with (first .Values.configuration.databaseReplicas.hosts) }}
             - name: DB_HOST
