deploy extra secret

--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -33,3 +33,11 @@ metadata:
   namespace: monitoring
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ci642yahclnvmjpwrpy3hnluse"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: esb-secrets
+  namespace: esb
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/jtq7udvdfeq3hizmjbrpmxnyuq"
