changes DB configuration from local DB to managed DB (#67)
* changes DB configuration from local DB to managed DB

* this is no longer required if DB_MODE is set to no-verify

* deploy extra secret

* update deployment-sidekiq.yaml for managed DO DB

* update streaming

--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -25,10 +25,8 @@ spec:
     spec:
       containers:
         - command:
-            - bash
-            - -c
-            - 'sed -i ''s/pgConfigs.production.ssl = true;/pgConfigs.production.ssl =
-          { rejectUnauthorized: false, };/g'' streaming/index.js && node ./streaming'
+          - node
+          - ./streaming
           env:
             {{- if .Values.configuration.databaseReplicas.enabled }}
             {{- with (first .Values.configuration.databaseReplicas.hosts) }}
@@ -46,16 +44,6 @@ spec:
               value: empty
             {{- end }}
             {{- end }}
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  key: {{ .Values.configuration.database.credentialSecret.usernameKey }}
-                  name: {{ .Values.configuration.database.credentialSecret.name }}
-            - name: DB_PASS
-              valueFrom:
-                secretKeyRef:
-                  key: {{ .Values.configuration.database.credentialSecret.passwordKey }}
-                  name: {{ .Values.configuration.database.credentialSecret.name }}
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -64,7 +52,7 @@ spec:
             - name: PORT
               value: "4000"
             - name: DB_SSLMODE
-              value: "disable"
+              value: "no-verify"
           envFrom:
             - configMapRef:
                 name: {{ include "mastodon.fullname" . }}-env
