correct DB_PASS in streaming

--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -49,6 +49,11 @@ spec:
                 secretKeyRef:
                   key: REDIS_PASSWORD
                   name: {{ include "mastodon.fullname" . }}-secrets-env
+            - name: DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  key: DB_PASS
+                  name: {{ include "mastodon.fullname" . }}-secrets-env
             - name: PORT
               value: "4000"
             - name: DB_SSLMODE
