--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -49,6 +49,11 @@ spec:
                 secretKeyRef:
                   key: REDIS_PASSWORD
                   name: {{ include "mastodon.fullname" . }}-secrets-env
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  key: DB_USER
+                  name: {{ include "mastodon.fullname" . }}-secrets-env
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
