fix the db migration script, needed quotes around a number

--- a/mastodon-chart/templates/job-db-migrate.yaml
+++ b/mastodon-chart/templates/job-db-migrate.yaml
@@ -30,7 +30,7 @@ spec:
             - db:migrate
           env:
             - name: DB_PORT
-              value: {{ .Values.configuration.database.dbMigrations.port }}
+              value: {{ .Values.configuration.database.dbMigrations.port | quote }}
             - name: DB_NAME
               value: {{ .Values.configuration.database.dbMigrations.name }}
           envFrom:
