--- a/mastodon-chart/templates/ingress.yaml
+++ b/mastodon-chart/templates/ingress.yaml
@@ -3,8 +3,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    nginx.ingress.kubernetes.io/proxy-body-size: 80m
-    nginx.ingress.kubernetes.io/client-body-buffer-size: 80m
+    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingress.maxBodySize }}
+    nginx.ingress.kubernetes.io/client-body-buffer-size: {{ .Values.ingress.maxBodySize }}
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: {{ .Values.ingress.upstreamProxyTimeout | quote }}
+    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingress.upstreamProxyTimeout | quote }}
+    nginx.ingress.kubernetes.io/proxy-send-timeout: {{ .Values.ingress.upstreamProxyTimeout | quote }}
     cert-manager.io/cluster-issuer: letsencrypt-prod
   labels:
     {{- include "mastodon.labels" . | nindent 4 }}
