increase memory limits for web pods (https://github.com/mastodon/mastodon/pull/23726)

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -72,10 +72,10 @@ web:
   maxThreads: 5
   resources:
     requests:
-      cpu: 280m
-      memory: 1743M
+      cpu: 500m
+      memory: 1536Mi
     limits:
-      memory: 1743M
+      memory: 3072Mi
   startupProbe:
     httpGet:
       port: http
