--- a/argocd/applications/loki.yaml
+++ b/argocd/applications/loki.yaml
@@ -21,7 +21,7 @@ spec:
             type: s3
             s3:
               s3: s3://loki-toot-community
-              endpoint: https://0ae89288096e9795bb1a5d327d89aec5.r2.cloudflarestorage.com
+              endpoint: https://ams3.digitaloceanspaces.com
               secretAccessKey: ${S3_SECRET_ACCESS_KEY}
               accessKeyId: ${S3_ACCESS_KEY}
               s3ForcePathStyle: false
@@ -37,7 +37,7 @@ spec:
             retention_delete_worker_count: 150
 
           limits_config:
-            retention_period: 2160h
+            retention_period: 8760h
 
         read:
           extraArgs:
