--- a/mastodon-chart/templates/cronjob-accounts-prune.yaml
+++ b/mastodon-chart/templates/cronjob-accounts-prune.yaml
@@ -31,6 +31,14 @@ spec:
                     name: {{ include "mastodon.fullname" . }}-env
                 - secretRef:
                     name: {{ include "mastodon.fullname" . }}-secrets-env
+              {{- if .Values.configuration.search.enabled }}
+              env:
+                - name: ES_PASS
+                  valueFrom:
+                    secretKeyRef:
+                      key: {{ .Values.configuration.search.password.secretRef.key }}
+                      name: {{ .Values.configuration.search.password.secretRef.name }}
+              {{- end }}
               resources:
                 {{- toYaml .Values.jobs.accountsPrune.resources | nindent 16 }}
 {{ end }}
